--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -41,4 +41,10 @@
         android:layout_height="wrap_content"
         android:text="启动activity并返回数据" />
 
+    <Button
+        android:id="@+id/btnStartLearnLayout"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="启动LearnLayoutActivity" />
+
 </LinearLayout>
